bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: not found: value ==
                                                case x=="R"  => droite();avance(2)
                                                      ^BDR2:4: error: not found: value ==
                                                case x=="L"=>gauche();avance()
                                                      ^BDR2:5: error: not found: value ==
                                                case x=="I"=>droite();droite();avance()
                                                      ^BDR2:6: error: not found: value ==
                                                case x=="A"=>avance()
                                                      ^BDR2:7: error: not found: value ==
                                                case x=="B"=>avance(2)
                                                      ^BDR2:8: error: not found: value ==
                                                case x=="C"=>avance(3)
                                                      ^BDR2:9: error: not found: value ==
                                                case x=="D"=>avance(4)
                                                      ^BDR2:10: error: not found: value ==
                                                case x=="E"=>avance(5)
                                                      ^BDR2:11: error: not found: value ==
                                                case x=="F"=>avance(6)
                                                      ^BDR2:12: error: not found: value ==
                                                case x=="Z"=>recule(1)
                                                      ^BDR2:13: error: not found: value ==
                                                case x=="Y"=>recule(2)
                                                      ^BDR2:14: error: not found: value ==
                                                case x=="X"=>recule(3)
                                                      ^BDR2:15: error: not found: value ==
                                                case x=="W"=> recule(4)
                                                      ^