bdr.BDR2.scala.code
var x="0"
while (estSurMessage()){x=litMessage();x match{
  																							case x=="R"	=> droite();avance(2)
  																							case x=="L"=>gauche();avance()
  																							case x=="I"=>droite();droite();avance()
  																							case x=="A"=>avance()
  																							case x=="B"=>avance(2)
  																							case x=="C"=>avance(3)
  																							case x=="D"=>avance(4)
  																							case x=="E"=>avance(5)
  																							case x=="F"=>avance(6)
  																							case x=="Z"=>recule(1)
  																							case x=="Y"=>recule(2)
  																							case x=="X"=>recule(3)
  																							case x=="W"=> recule(4)
}}